--- a/css/base.css
+++ b/css/base.css
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,700');
 @import url('https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css');
 .snip1583 {
-  font-family: 'Fira Sans Extra Condensed', Arial, sans-serif;
+  font-family: 'Jua', sans-serif;
   position: relative;
   display: inline-block;
   overflow: hidden;
   margin: 8px;
-  min-width: 230px;
-  max-width: 315px;
+  min-width: 200px;
+  max-width: 200px;
   width: 100%;
-  font-size: 16px;
+  font-size: 27px;
   background-color: #fff;
   color: #111;
   line-height: 1.2em;
@@ -111,83 +111,3 @@
 
 
 /* Demo purposes only */
-
-body {
-  background-color: #212121;
-  text-align: center;
-}
-
-/* Aram Class Form Admin Modal Pages*/
-body {font-family: Arial, Helvetica, sans-serif;}
-
-/* The Modal (background) */
-.modalAdmin {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modalAdmin-content {
-    position: relative;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0px;
-    border: 1px solid #888;
-    width: 80%;
-    height: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s;
-}
-
-/* Add Animation */
-@-webkit-keyframes animatetop {
-    from {top:-300px; opacity:0} 
-    to {top:0; opacity:1}
-}
-
-@keyframes animatetop {
-    from {top:-300px; opacity:0}
-    to {top:0; opacity:1}
-}
-
-/* The Close Button */
-.closeAdmin {
-    color: white;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.closeAdmin:hover,
-.closeAdmin:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.modalAdmin-header {
-    padding: 2px 16px;
-    background-color: #5cb85c;
-    color: white;
-}
-
-.modalAdmin-body {padding: 2px 16px;}
-
-.modalAdmin-footer {
-    padding: 2px 16px;
-    background-color: #5cb85c;
-    color: white;
-}
-/* Aram Class Form Admin Modal Pages*/
