--- a/css/main.css
+++ b/css/main.css
@@ -4,21 +4,98 @@ body {
   min-height: 100% !important;
   height: 100%;
 }
-.navbar-nav>li>a { padding-top: 10px; padding-bottom: 10px; }
- .navbar-brand { padding: 10px 15px; } 
+.icons{
+  width: 200px;
+}
+.snip1583{
+  width: 200px;
+}
+.figcaption{
+  width: 200px;
+}
+.price{
+  width: 200px;
+}
+
+/* .shop-by-age h1 {
+
+} */
+
+.shop-by-age .age {
+  position: relative;
+  width: 50%;
+}
+
+.shop-by-age .age img {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.shop-by-age .age .middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.shop-by-age .age:hover img{
+  opacity: 0.55;
+}
+
+.shop-by-age .age:hover .middle {
+  opacity: 1;
+}
+
+.shop-by-age .age .middle .text {
+  font-size: 36px;
+  padding: 16px 32px;
+  text-shadow: 2px 2px rgba(0,0,0,0.75);
+}
+
+.sticky-filter {
+  background-color: rgba(241,128,0,0.25);
+  border-radius: 12px;
+  box-shadow: 4px 4px 18px #000;
+  margin: 16px 16px;
+  padding: 16px 16px;
+  width: 260px;
+  height: 260px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 246px;
+}
+
+.navbar-nav>li>a {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.navbar-brand {
+  padding: 10px 15px;
+}
+
 /* .nextprev {
 
 }
  */
+
 .nextprev a {
-    text-decoration: none;
-    display: inline-block;
-    padding: 8px 16px;
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
 }
 
 .nextprev a:hover {
-    background-color: #ddd;
-    color: black;
+  background-color: #ddd;
+  color: black;
 }
 
 .nextprev .previous {
@@ -32,7 +109,7 @@ body {
 }
 
 .nextprev .round {
-    border-radius: 50%;
+  border-radius: 50%;
 }
 
 .products {
@@ -43,18 +120,22 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
-
+  height: 60px;
+  /* Set the fixed height of the footer here */
+  line-height: 60px;
+  /* Vertically center the text there */
 }
-footer .footer-info .footer-add-margin > ul {
+
+footer .footer-info .footer-add-margin>ul {
   list-style-type: none;
 }
+
 .footer1 {
   width: auto;
   max-width: 680px;
   padding: 0 15px;
 }
+
 .myh2 {
   font-family: 'Jua', sans-serif;
   text-shadow: 2px 3px 0 #cc9900;
@@ -62,34 +143,37 @@ footer .footer-info .footer-add-margin > ul {
   font-size: 25px;
 }
 
-.myp{
+.myp {
   font-family: 'Jua', sans-serif;
   color: rgb(204, 153, 0);
   font-size: 25px;
   text-shadow: 0.5px 0.5px 0 #ffffff;
 }
 
-.myh4{
+.myh4 {
   font-family: 'Jua', sans-serif;
-  color: rgb(204, 153, 0) !important ;
+  color: rgb(204, 153, 0) !important;
   font-size: 25px;
 }
-.myh5{
+
+.myh5 {
   font-family: 'Jua', sans-serif;
   color: rgb(255, 26, 26);
   font-size: 25px;
   text-shadow: 0.5px 1px 0 #ffffff;
 }
+
 .myh5 a {
   color: rgb(255, 26, 26);
   text-decoration: none;
 }
-.mytext{
+
+.mytext {
   font-family: 'Jua', sans-serif;
 }
 
-.badge{
-    font-family: 'Jua', sans-serif;
+.badge {
+  font-family: 'Jua', sans-serif;
 }
 
 .centered-div {
@@ -108,15 +192,17 @@ footer .footer-info .footer-add-margin > ul {
   bottom: 3rem;
   z-index: 10;
 }
+
 .carousel-inner {
   padding-left: 0 auto !important;
 }
 
 .carousel-item {
   height: 32rem;
-   background-image: url("bg.jpg"); 
+  background-image: url("bg.jpg");
 }
-.carousel-item > img {
+
+.carousel-item>img {
   height: 32rem;
 }
 
@@ -124,16 +210,19 @@ footer .footer-info .footer-add-margin > ul {
   margin-bottom: 1.5rem;
   text-align: center;
 }
+
 .marketing h2 {
   font-weight: 400;
 }
+
 .marketing .col-lg-4 p {
   margin-right: .75rem;
   margin-left: .75rem;
 }
 
 .featurette-divider {
-  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+  margin: 5rem 0;
+  /* Space out the Bootstrap <hr> more */
 }
 
 .featurette-heading {
@@ -141,47 +230,60 @@ footer .footer-info .footer-add-margin > ul {
   line-height: 1;
   letter-spacing: -.05rem;
 }
+
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
 }
+
 .modal-content {
-    background-color: rgb(255, 255, 204);
-    margin: 10% auto; /* 15% from the top and centered */
-    /* padding: 20px; */
-    padding: 0px;
-    border: 1px solid #888;
-    width: 30%;
+  background-color: rgb(255, 255, 204);
+  margin: 10% auto;
+  /* 15% from the top and centered */
+  /* padding: 20px; */
+  padding: 0px;
+  border: 1px solid #888;
+  width: 30%;
 }
+
 .modal-header {
   padding: 0;
   background-color: #5cb85c;
   color: white;
   text-align: center;
 }
+
 .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+.close:hover, .close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 /* Floating labels */
+
 .form-signin {
   width: 100%;
   max-width: 420px;
@@ -194,18 +296,18 @@ footer .footer-info .footer-add-margin > ul {
   margin-bottom: 1rem;
 }
 
-.form-label-group > input,
-.form-label-group > label {
+.form-label-group>input, .form-label-group>label {
   padding: var(--input-padding-y) var(--input-padding-x);
 }
 
-.form-label-group > label {
+.form-label-group>label {
   position: absolute;
   top: 0;
   left: 0;
   display: block;
   width: 100%;
-  margin-bottom: 0; /* Override default `<label>` margin */
+  margin-bottom: 0;
+  /* Override default `<label>` margin */
   line-height: 1.5;
   color: #495057;
   border: 1px solid transparent;
@@ -238,20 +340,19 @@ footer .footer-info .footer-add-margin > ul {
   padding-bottom: calc(var(--input-padding-y) / 3);
 }
 
-.form-label-group input:not(:placeholder-shown) ~ label {
+.form-label-group input:not(:placeholder-shown)~label {
   padding-top: calc(var(--input-padding-y) / 3);
   padding-bottom: calc(var(--input-padding-y) / 3);
   font-size: 12px;
   color: #777;
 }
-@media (min-width: 40em) {
 
+@media (min-width: 40em) {
   .carousel-caption p {
     margin-bottom: 1.25rem;
     font-size: 1.25rem;
     line-height: 1.4;
   }
-
   .featurette-heading {
     font-size: 50px;
   }
@@ -262,10 +363,12 @@ footer .footer-info .footer-add-margin > ul {
     margin-top: 7rem;
   }
 }
-.carousel-control-prev{
-   color: black !important;
+
+.carousel-control-prev {
+  color: black !important;
 }
-.sr-only{
+
+.sr-only {
   color: black !important;
 }
 
@@ -274,41 +377,48 @@ footer .footer-info .footer-add-margin > ul {
     padding-top: 12em;
   }
 }
+
 @media all and (max-width: 991px) {
   body {
     padding-top: 24em;
   }
 }
+
 @media all and (max-width: 768px) {
   body {
     padding-top: 34em;
   }
 }
-@media all and (max-width: 575px) { }
+
+@media all and (max-width: 575px) {}
 
 /* Shopping cart style */
-
 
 .Itemimage {
   float: left;
   width: 18%;
 }
+
 .Itemdescription {
   float: left;
   width: 35%;
 }
+
 .Itemprice {
   float: left;
   width: 10%;
 }
+
 .Itemquantity {
   float: left;
   width: 10%;
 }
+
 .Itemremove {
   float: left;
   width: 10%;
 }
+
 .Productsprice {
   float: left;
   width: 14%;
@@ -319,16 +429,19 @@ footer .footer-info .footer-add-margin > ul {
   content: '';
   display: table;
 }
+
 .group:after, .ShoppingCart:after, .Namecolumns:after, .Item:after, .Itemtotal:after {
   clear: both;
 }
+
 .group, .ShoppingCart, .Namecolumns, .Item, .Itemtotal {
   zoom: 1;
 }
 
 .Item .Itemprice:before, .Item .Productsprice:before, .Totalvalue:before {
-  content: '$';
+  content: '€';
 }
+
 /*   
 body {
   padding: 0px 30px 30px 20px;
@@ -342,9 +455,30 @@ label {
   color: rgb(59, 29, 29);
 }
 
-*/  
+*/
+
 .ShoppingCart {
-  margin-top: -45px;
+  /*             background-image: url("images/carousel.png");  */
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(255, 228, 102);
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+.ShoppingCart .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+  color: black;
 }
 
 .Namecolumns label {
@@ -352,6 +486,7 @@ label {
   margin-bottom: 15px;
   border-bottom: 1px solid rgb(138, 111, 111);
 }
+
 .Namecolumns .Itemimage, .Namecolumns .Itemdescription, .Namecolumns .Itemremove {
   text-indent: -9999px;
 }
@@ -361,23 +496,29 @@ label {
   padding-bottom: 10px;
   border-bottom: 1px solid rgb(156, 122, 122);
 }
+
 .Item .Itemimage {
   text-align: center;
 }
+
 .Item .Itemimage img {
   width: 100px;
 }
+
 .Item .Itemdescription .Itemname {
   margin-right: 20px;
   font-family: "Arial Black", Gadget, sans-serif;
 }
+
 .Item .Itemdescription .Itemdetails {
   margin: 5px 20px 5px 0;
   line-height: 1.4em;
 }
+
 .Item .Itemquantity input {
   width: 40px;
 }
+
 .Item .Removeitem {
   border: 0;
   padding: 4px 8px;
@@ -387,6 +528,7 @@ label {
   font-size: 12px;
   border-radius: 3px;
 }
+
 .Item .Removeitem:hover {
   background-color: rgb(141, 68, 68);
 }
@@ -397,20 +539,26 @@ label {
   width: 100%;
   margin-bottom: 10px;
 }
+
 .Total .Itemtotal label {
   float: left;
   clear: both;
-  width: 79%;
+  width: 76%;
   text-align: right;
+  font-weight: bold;
 }
+
 .Total .Itemtotal .Totalvalue {
   float: right;
   width: 21%;
   text-align: right;
+  margin-right: 3%;
 }
+
 .Total .Itemtotal-total {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
+
 .Checkout {
   float: right;
   border: 0;
@@ -421,17 +569,89 @@ label {
   font-size: 25px;
   border-radius: 3px;
 }
+
 .Checkout:hover {
   background-color: rgb(29, 4, 68);
 }
+/* 
 .overlay {
-  height: 100%;
-  width: 100%;
+  width: 0;
   position: fixed;
   z-index: 1;
-/*   top: 0;
+  top: 0;
   left: 0;
- */  /* overflow-x: hidden; */
+  background-color: rgb(252, 252, 252);
+ 
+  overflow-x: hidden;
   transition: 0.5s;
 }
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+  color: black;
+}
+ */
 /* end of shopping cart style */
+
+.adminpage {
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(255, 255, 255);
+
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+.adminpage .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+  color: black;
+}
+
+.adminul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+.adminli {
+  float: left;
+}
+
+.adminlia {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.adminlia:hover {
+  background-color: #111;
+}
+
+#SearchInput {
+  background-image: url('../images/searchicon.png');
+  background-position: 10px 12px;
+  background-repeat: no-repeat;
+  width: 50%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
